--- a/Foodie/Views/EditRecipePage.xaml
+++ b/Foodie/Views/EditRecipePage.xaml
@@ -5,7 +5,7 @@
     x:Class="Foodie.Views.EditRecipePage"
     Title="Foodie">
     <ContentPage.Content>
-        <TableView Intent="Form">
+        <TableView Intent="Form" HasUnevenRows="true">
             <TableView.Root>
                 <TableSection Title="Info">
                     <EntryCell Label="Recipe Name" Text="Scrambled Eggs"
@@ -18,11 +18,36 @@
                                HorizontalTextAlignment="End" />
                     <SwitchCell Text="Make again?" On="true"></SwitchCell>
                 </TableSection>
+                <TableSection Title="Meal">
+                    <ViewCell>
+                        <ContentView>
+                            <StackLayout Orientation="Horizontal" Margin="15,10,10,10">
+                                <Picker HorizontalOptions="FillAndExpand">
+                                    <Picker.Items>
+                                        <x:String>Breakfast</x:String>
+                                        <x:String>Lunch</x:String>
+                                        <x:String>Dinner</x:String>
+                                        <x:String>Snack</x:String>
+                                    </Picker.Items>
+                                    <Picker.SelectedIndex>0</Picker.SelectedIndex>
+                                </Picker>
+                            </StackLayout>
+                        </ContentView>
+                    </ViewCell>
+                </TableSection>
                 <TableSection Title="Ingredients">
-                    <EntryCell Label="Ingredients" Text="8 eggs, 1/2 cup milk" />
+                    <ViewCell>
+                        <ContentView HeightRequest="125" Margin="15,10,10,10">
+                            <Editor Text="8 eggs, 1/2 cup milk" />
+                        </ContentView>
+                    </ViewCell>
                 </TableSection>
                 <TableSection Title="Directions">
-                    <EntryCell Label="Directions" Text="Break eggs, mix in milk, pour mixture, cook, enjoy" />
+                    <ViewCell>
+                        <ContentView HeightRequest="200" Margin="15,10,10,10">
+                            <Editor Text="Break eggs, mix in milk, pour mixture, cook, enjoy" />
+                        </ContentView>
+                    </ViewCell>
                 </TableSection>
             </TableView.Root>
         </TableView>
