--- a/Foodie/Views/EditRecipePage.xaml
+++ b/Foodie/Views/EditRecipePage.xaml
@@ -1,7 +1,8 @@
 ﻿<?xml version="1.0" encoding="UTF-8"?>
 <ContentPage 
     xmlns="http://xamarin.com/schemas/2014/forms" 
-    xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml" 
+    xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
+    xmlns:local="clr-namespace:Foodie.Behaviors"
     x:Class="Foodie.Views.EditRecipePage"
     Title="Foodie">
     <ContentPage.Content>
@@ -14,8 +15,18 @@
                                HorizontalTextAlignment="End" />
                     <EntryCell Label="Cook Time" Text="2 mins"
                                HorizontalTextAlignment="End" />
-                    <EntryCell Label="Number of Servings" Text="2"
-                               HorizontalTextAlignment="End" />
+                    <ViewCell>
+                        <ContentView>
+                            <StackLayout Orientation="Horizontal" Margin="15,10,10,10">
+                                <Label Text="Number of Servings" VerticalOptions="Center" />
+                                <Entry Text="2" HorizontalOptions="FillAndExpand" HorizontalTextAlignment="End">
+                                    <Entry.Behaviors>
+                                        <local:NumericEntryBehavior />
+                                    </Entry.Behaviors>
+                                </Entry>
+                            </StackLayout>
+                        </ContentView>
+                    </ViewCell>
                     <SwitchCell Text="Make again?" On="true"></SwitchCell>
                 </TableSection>
                 <TableSection Title="Meal">
